--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>1.4.5</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.31</version>
+        </dependency>
+
     </dependencies>
 
 
